--- a/style.css
+++ b/style.css
@@ -7,13 +7,16 @@ body {
   background-color: #f5f5f5;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
+h1 {
+  text-align: center;
+}
 
 .container {
   background-color: #fff;
   width: 85%;
   max-width: 30em;
   position: absolute;
-  left: 33%;
+  left: 25%;
   top: 20%;
   border-radius: 10px;
   padding: 3.12em 6em;
@@ -26,6 +29,7 @@ body {
   padding: 7px;
   font-family: "Roboto Mono", monospace;
   border-radius: 15px;
+  padding-left: 20%;
 }
 form {
   margin: 14px;
@@ -33,25 +37,38 @@ form {
   flex-direction: column;
 }
 
-.controls {
-  margin-top: 20px;
-}
-
-.form-group {
+/* label {
+  margin-right: 10px;
+} */
+.input-box {
   display: flex;
-  align-items: center;
-  flex-wrap: wrap;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  margin-left: 10%;
 }
 
-label {
-  margin-right: 10px;
-}
-
-input[type="time"] {
-  margin-right: 10px;
+input[type="number"] {
+  margin-right: 5px;
   font-size: 16px;
-  width: 235px;
-  margin-bottom: 5px;
+  width: 40px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  height: 23px;
+}
+input:focus {
+  outline: none;
+}
+
+#zone-time {
+  margin-left: 10px;
+  width: 50px;
+  height: 26px;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 button {
@@ -59,21 +76,23 @@ button {
   padding: 8px 12px;
   background-color: #007bff;
   color: #fff;
+  margin: 10px 15px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
 }
 
-button:disabled {
+/* button:disabled {
   opacity: 0.5;
   cursor: not-allowed;
-}
-#stop-alarm {
+} */
+#stop {
   background-color: red;
   width: 65px;
 }
 #set-alarm {
+  background-color: #007bff;
   width: 65px;
   margin-right: 22px;
 }
