--- a/style.css
+++ b/style.css
@@ -7,8 +7,15 @@ body {
   background-color: #f5f5f5;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
-h1 {
+.heading {
   text-align: center;
+  text-decoration: underline;
+  letter-spacing: 1.5px;
+  word-spacing: 4px;
+  font-size: 40px;
+  color: rgb(5, 119, 123);
+  margin-top: 10px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .container {
@@ -16,10 +23,11 @@ h1 {
   width: 85%;
   max-width: 30em;
   position: absolute;
-  left: 20%;
+  left: 23.4%;
   top: 20%;
-  border-radius: 10px;
+  border-radius: 50px;
   padding: 3.12em 6em;
+  box-shadow: inset 0px 0px 15px grey;
 }
 
 #currentTimeDisplay {
@@ -97,6 +105,11 @@ button {
   margin-right: 22px;
 }
 
+h2 {
+  letter-spacing: 0.5px;
+  text-align: center;
+}
+
 .alarm-list {
   display: flex;
   flex-direction: row;
@@ -113,7 +126,9 @@ button {
 .alarm-list .info p {
   font-size: 22px;
   margin-left: auto;
+  color: dimgray;
 }
+
 .alarm-list .delete-btn {
   background-color: lightslategray;
   color: #fff;
@@ -122,4 +137,5 @@ button {
 ion-icon {
   font-size: 22px;
   margin-right: 10px;
+  color: dimgray;
 }
