--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* styles  */
 * {
   margin: 0;
   padding: 0;
@@ -7,6 +8,8 @@ body {
   background-color: #f5f5f5;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
+
+/* styling of heading */
 .heading {
   text-align: center;
   text-decoration: underline;
@@ -18,6 +21,7 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+/* styles added to alarm container */
 .container {
   background-color: #fff;
   width: 85%;
@@ -30,24 +34,24 @@ body {
   box-shadow: inset 0px 0px 15px grey;
 }
 
+/* styles added to current time display */
 #currentTimeDisplay {
   font-size: 3rem;
   font-weight: 600;
-  box-shadow: 0 0 20px rgba(104, 177, 236, 0.25);
+  box-shadow: inset 0 0 8px 3px rgba(104, 177, 236, 0.25);
   padding: 7px;
   font-family: "Roboto Mono", monospace;
   border-radius: 15px;
   padding-left: 20%;
 }
+
+/* form designs */
 form {
   margin: 14px;
   display: flex;
   flex-direction: column;
 }
 
-/* label {
-  margin-right: 10px;
-} */
 .input-box {
   display: flex;
   flex-direction: row;
@@ -72,7 +76,11 @@ input:focus {
   width: 50px;
   height: 26px;
 }
+#zone-time:focus {
+  outline: none;
+}
 
+/* Styles added to button */
 .button-container {
   display: flex;
   flex-direction: row;
@@ -91,14 +99,13 @@ button {
   transition: all 0.2s ease-in-out;
 }
 
-/* button:disabled {
-  opacity: 0.5;
-  cursor: not-allowed;
-} */
+/* stop button */
 #stop {
   background-color: red;
   width: 65px;
 }
+
+/* setAlarm button */
 #set-alarm {
   background-color: #007bff;
   width: 65px;
@@ -110,6 +117,7 @@ h2 {
   text-align: center;
 }
 
+/* styles of rendered alarm list */
 .alarm-list {
   display: flex;
   flex-direction: row;
